# EoE

./: CNAME  LICENSE.txt  README.md  gitignore.txt
EoE/: Cargo.toml  rustfmt.toml
EoE-program/: Cargo.toml
EoE-program/scr/: errors.rs  lib.rs
EoE-program/scr/instructions/: init_vault_accounts.rs  mod.rs
EoE-program/scr/states/: mod.rs  vault.rs
EoE/src/: api.rs  fips202.rs  lib.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rounding.rs  sign.rs  symmetric.rs
EoE/src/parameters/: mode_2.rs  mode_3.rs  mode_5.rs
