[package]
name = "eternity_echoes"
version = "0.1.0"
description = "A foundational library for artifact validation and cryptographic operations within the Echoes of Eternity framework."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eternity_echoes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = ["artifact-heap"]
artifact-heap = []

[dependencies]
anchor-lang = "0.30.1"
artifact_core = { path = "../artifact_core", features = ["mode3"] }
smalloc = "0.1.2"

